fixed runList scrollbar behaviour

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -218,9 +218,11 @@ input {
   grid-row: 4 / 6;
   grid-column: 1 / 3;
 }
-#runList {
+#runListItems {
   overflow-y: scroll;
-  height: 400px;
+  height: 415px;
+}
+#runList {
   background-color: rgb(50, 50, 70);
   grid-row: 6 / 8;
   grid-column: 1 / 3;
@@ -293,7 +295,6 @@ input {
     grid-column: 1 / 2;
   }
   #runList {
-    height: auto;
     grid-row: 4 / 6;
     grid-column: 2 / 3;
   }
